--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
 	"antihidetag": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
+	"ownerNumber": "6283829386551",
 	"ownerNumberr": "62887435047326",
 	"cr": "@ZeeoneOfc",
 	"yt":"bit.ly/ytzeeoneofc",
@@ -13,8 +13,8 @@
 	"donate": "bit.ly/dtzeeoneofc",
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
+	"ownername": "TOGA GANTENG",
+	"botname":"ΛᄂPΉΛ BӨƬ V8",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"IMG_20211001_074948_766-min.jpg",
 	"fakethumb":"IMG_20211001_074948_766-min.jpg", 
